--- a/app/_locales/nl/messages.json
+++ b/app/_locales/nl/messages.json
@@ -256,7 +256,7 @@
     "description": "User is important an account and needs to add a file to continue"
   },
   "negativeETH": {
-    "message": "Kan geen negatieve hoeveelheden ETH verzenden."
+    "message": "Kan geen negatieve hoeveelheden UBQ verzenden."
   },
   "networks": {
     "message": "Netwerken"
@@ -354,7 +354,7 @@
     "message": "Sturen"
   },
   "sendETH": {
-    "message": "Verzend ETH"
+    "message": "Verzend UBQ"
   },
   "sendTokens": {
     "message": "Stuur tokens"
@@ -651,5 +651,17 @@
   },
   "readyToConnect": {
     "message": "Klaar om te verbinden?"
+  },
+  "welcomeBack": {
+    "message": "Welkom terug!"
+  },
+  "unlockMessage": {
+    "message": "Het decentrale web wacht op je"
+  },
+  "importUsingSeed": {
+    "message": "Importeer met behulp van je seed phrase"
+  },
+  "password": {
+    "message": "Wachtwoord"
   }
 }
